Improve createbadge tab completion with positional hints
Shows <badge_id> for arg 1, <display_name...> for arg 2, then
true/false and function types (dummy, command:, on_mode_survive:, etc.)
for remaining args.

Co-Authored-By: Claude Opus 4.6 (1M context) <noreply@anthropic.com>